--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,7 @@ body,html{
   margin-right: 0%;
   padding-left:0%;
   padding-right:0%;
+  background: #16272f;
   position: absolute;
 }
 #upperContent{
@@ -66,10 +67,11 @@ h2{
   font-size: 30px;
   font-weight: bold;
   color:white;
+  color: #d6d6d6;
   margin-bottom: 0%;
   margin-top: 0%;
   padding-top: 30px;
-  text-shadow: -1px 1px 10px #ffffff;
+  text-shadow: -1px 1px 10px #c6c6c6;
 }
 h3{
   font-size: 20px;
@@ -84,9 +86,33 @@ h4{
   top: 0%;
   height: 1px;
   position: absolute;
+  text-shadow: -1px 1px 10px #ffffff;
   color: #fff;
   margin-top: 0%;
 }
+h6{
+  top: -500px;
+    font-size: 100px;
+    position: absolute;
+    text-align: center;
+    display:none;
+  left: 40%;
+
+  font-weight: bold;
+  color:white;
+  text-shadow: -1px 1px 50px #000000;    
+  z-index:10;
+
+}
+h7{
+  top: 600px;
+    font-size: 40px;
+    position: absolute;
+    text-align: center;
+    background: url(../assets/5.png) repeat-x;
+
+}
+
 #h4future{
   color: #152f3d;
   padding-left: 50px;
@@ -115,7 +141,7 @@ h4{
 #timeline{
   height: 200px;
   width: 100%;
-  background-color: #0000006b;
+  background-color: #000000ba;
   bottom: 0%;
   z-index: 10;
   position: absolute;
@@ -149,7 +175,7 @@ h4{
   width: 13%;
   top: 0%;
   height: 100%;
-  text-align: center;
+  text-align: right;
 }
 #pastborder{
   height: 13px;
@@ -186,7 +212,8 @@ h4{
   color:#152f3d;
 }
 #h2{
-  color:#152f3d;
+  color:#152f3d;  
+  text-shadow: -1px 1px 10px #2f4652b3;
 }
 #h3{
   color:#152f3d9e;
@@ -197,28 +224,59 @@ h4{
   text-shadow: -1px 1px 10px #ffffff;
 }
 #dot1world{
+  display:none;
   border: 7px solid #001f649e;
-  height: 28px;
-  width: 28px;
+  height: 40px;
+  width: 40px;
   background-color: #fff;
   border-radius: 50%;
-  border: 1px solid #d5d5d5;
-  top: 82px;
+  left:-40px;
+  border: 1px solid #d5d5d595;
+  top: 80px;
   position: absolute;
   display: inline-block;
   /* align-items: center; */
   /* text-align: center; */
-  box-shadow: inset 0px 1px 13px 5px rgb(255, 255, 255);
-  z-index: 100;
-  background: url(../assets/5.png) repeat-x;
+  box-shadow: 0px 45px 30px 30px rgba(255, 255, 255, 0.406);  z-index: 100;
+  background: url(../assets/china.png) repeat-x;
   background-size: auto 100%;
   -webkit-transform-style: preserve-3d;
+
   -webkit-animation: move-map 60s infinite linear;
   -moz-animation: move-map 60s infinite linear;
   -o-animation: move-map 60s infinite linear;
   -ms-animation: move-map 60s infinite linear;
   animation: move-map 60s infinite linear;
 }
+
+#dot2world{
+  border: 7px solid #001f649e;
+  height: 1508px;
+  width: 1508px;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 0px solid #d5d5d5;
+  top: -200px;
+  left: 10%;
+
+  position: absolute;
+  display: inline-block;
+  display:none;
+  /* align-items: center; */
+  /* text-align: center; */
+  box-shadow: inset 0px 1px 200px 0px rgb(255, 255, 255);
+  z-index: 10;
+  background: url(../assets/5.png) repeat-x;
+  background-size: auto 100%;
+  -webkit-transform-style: preserve-3d;
+  -webkit-animation: move-map 10s infinite linear;
+  -moz-animation: move-map 10s infinite linear;
+  -o-animation: move-map 10s infinite linear;
+  -ms-animation: move-map 10s infinite linear;
+  animation: move-map 10s infinite linear;
+  
+}
+
 
 #pin1{
   height: 15px;
@@ -247,7 +305,7 @@ h5{
   position: absolute;
   top:-40px;
   left:10px;
-  text-shadow: -1px 1px 10px #ffffff;
+  text-shadow: -1px 1px 10px #000000;
   font-size:25px;
   color:white;
 }
@@ -280,7 +338,7 @@ h5{
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  box-shadow: -40px 10px 70px 10px rgba(218, 218, 218, 0.17) inset;
+  box-shadow: -40px 10px 70px 10px rgba(0, 0, 0, 0.17) inset;
     z-index: 2;
 }
 
