--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,124 +1,132 @@
 @font-face {
-  font-family: "Avenir";
-  src: url("../font/Avenir.ttc");
+    font-family: "Avenir";
+    src: url("../font/Avenir.ttc");
 }
+
 @font-face {
-  font-family: "AvenirNext";
-  src: url("../font/Avenir Next.ttc");
+    font-family: "Avenir";
+    src: url("../font/AvenirNextLTPro-Demi.otf");
+    font-weight: bold;
 }
 
-body,html{
-  font-family: "Avenir";
-  width:1920px;
-  height:1080px;
-  padding-left:0%;
-  padding-right:0%;
-  margin-left: 0%;
-  margin-right: 0%;
-  margin-top: 0%;
-  margin-bottom: 0%;
-}
-#main{
-  height:100%;
-  width:100%;
-  margin-left: 0%;
-  margin-right: 0%;
-  padding-left:0%;
-  padding-right:0%;
-  background: #16272f;
-  position: absolute;
-}
-#upperContent{
-  height:1080px;
-  overflow: hidden;
-  width:100%;
-  margin-left: 0%;
-  margin-right: 0%;
-  padding-left:0%;
-  padding-right:0%;
-  position: absolute;
-}
-#container{
-  height:100px;
-  width:100px;
-}
-#mainimg{
-  width: 1920px;
-  height: auto;
-}
-#globe{
-  position: absolute;
-  top: 0%;
-  right: 0%;
-  z-index: 10;
+body,
+html {
+    font-family: "Avenir";
+    width: 1920px;
+    height: 1080px;
+    padding-left: 0%;
+    padding-right: 0%;
+    margin-left: 0%;
+    margin-right: 0%;
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
 
+#main {
+    height: 100%;
+    width: 100%;
+    margin-left: 0%;
+    margin-right: 0%;
+    padding-left: 0%;
+    padding-right: 0%;
+    background: #16272f;
+    position: absolute;
+}
 
+#upperContent {
+    height: 1080px;
+    overflow: hidden;
+    width: 100%;
+    margin-left: 0%;
+    margin-right: 0%;
+    padding-left: 0%;
+    padding-right: 0%;
+    position: absolute;
+}
+
+#container {
+    height: 100px;
+    width: 100px;
+}
+
+#mainimg {
+    width: 1920px;
+    height: auto;
+}
+
+#globe {
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    z-index: 10;
+}
 
 
 /*--------------TIMELINE----------------*/
 
+h1 {
+    font-size: 20px;
+    color: white;
+}
 
-h1{
-  font-size: 20px;
-  color:white;
+h2 {
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+    color: #d6d6d6;
+    margin-bottom: 0%;
+    margin-top: 0%;
+    padding-top: 30px;
+    text-shadow: -1px 1px 10px #c6c6c6;
 }
-h2{
-  font-size: 30px;
-  font-weight: bold;
-  color:white;
-  color: #d6d6d6;
-  margin-bottom: 0%;
-  margin-top: 0%;
-  padding-top: 30px;
-  text-shadow: -1px 1px 10px #c6c6c6;
+
+h3 {
+    font-size: 20px;
+    color: #c7c7c7;
+    margin-bottom: 1%;
+    margin-top: 0%;
 }
-h3{
-  font-size: 20px;
-  color:#c7c7c7;
-  margin-bottom: 1%;
-  margin-top: 0%;
+
+h4 {
+    font-size: 30px;
+    /* position: absolute; */
+    padding-left: 14px;
+    top: 0%;
+    height: 1px;
+    position: absolute;
+    text-shadow: -1px 1px 10px #ffffff;
+    color: #fff;
+    margin-top: 0%;
 }
-h4{
-  font-size: 30px;
-  /* position: absolute; */
-  padding-left: 14px;
-  top: 0%;
-  height: 1px;
-  position: absolute;
-  text-shadow: -1px 1px 10px #ffffff;
-  color: #fff;
-  margin-top: 0%;
-}
-h6{
-  top: -500px;
+
+h6 {
+    top: -500px;
     font-size: 100px;
     position: absolute;
     text-align: center;
-    display:none;
-  left: 40%;
-
-  font-weight: bold;
-  color:white;
-  text-shadow: -1px 1px 50px #000000;    
-  z-index:10;
-
+    display: none;
+    left: 40%;
+    font-weight: bold;
+    color: white;
+    text-shadow: -1px 1px 50px #000000;
+    z-index: 10;
 }
-h7{
-  top: 600px;
+
+h7 {
+    top: 600px;
     font-size: 40px;
     position: absolute;
     text-align: center;
     background: url(../assets/5.png) repeat-x;
-
 }
 
-#h4future{
-  color: #152f3d;
-  padding-left: 50px;
+#h4future {
+    color: #152f3d;
+    padding-left: 50px;
 }
+
 .dot {
-  height: 15px;
+    height: 15px;
     width: 15px;
     background-color: #fff;
     border-radius: 50%;
@@ -133,153 +141,151 @@ h7{
     z-index: 11;
     top: 41%;
 }
-#dotfuture{
-  box-shadow: 0px 1px 13px 5px rgba(116, 116, 116, 0.65);
+
+#dotfuture {
+    box-shadow: 0px 1px 13px 5px rgba(116, 116, 116, 0.65);
 }
 
-
-#timeline{
-  height: 200px;
-  width: 100%;
-  background-color: #000000ba;
-  bottom: 0%;
-  z-index: 10;
-  position: absolute;
-  display: table;
-  -webkit-box-shadow: 0px -12px 69px -14px rgba(255,255,255,1);
-    -moz-box-shadow: 0px -12px 69px -14px rgba(255,255,255,1);
-  box-shadow: 0px -12px 69px -14px rgba(255,255,255,1);
-  overflow: hidden;
-}
-#timelineshadow{
-  height: 200px;
-  width: 100%;
-  bottom: 0%;
-  position: absolute;
-  display: table;
-
-  -webkit-box-shadow: inset -480px 0px 90px 0px rgba(255, 255, 255, 0.8);
-  -moz-box-shadow: inset -480px 0px 90px 0px rgba(255, 255, 255, 0.8);
-  box-shadow: inset -480px 0px 90px 0px rgba(255, 255, 255, 0.8);
+#timeline {
+    height: 200px;
+    width: 100%;
+    background-color: #000000ba;
+    bottom: 0%;
+    z-index: 10;
+    position: absolute;
+    display: table;
+    -webkit-box-shadow: 0px -12px 69px -14px rgba(255, 255, 255, 1);
+    -moz-box-shadow: 0px -12px 69px -14px rgba(255, 255, 255, 1);
+    box-shadow: 0px -12px 69px -14px rgba(255, 255, 255, 1);
+    overflow: hidden;
 }
 
-
-
-#past{
-  display:inline-block;
-  width: 74%;
-
+#timelineshadow {
+    height: 200px;
+    width: 100%;
+    bottom: 0%;
+    position: absolute;
+    display: table;
+    -webkit-box-shadow: inset -480px 0px 90px 0px rgba(255, 255, 255, 0.8);
+    -moz-box-shadow: inset -480px 0px 90px 0px rgba(255, 255, 255, 0.8);
+    box-shadow: inset -480px 0px 90px 0px rgba(255, 255, 255, 0.8);
 }
-#current{
-  display:inline-block;
-  width: 13%;
-  top: 0%;
-  height: 100%;
-  text-align: right;
+
+#past {
+    display: inline-block;
+    width: 74%;
 }
-#pastborder{
-  height: 13px;
-  bottom: 48%;      width: 100%;
+
+#current {
+    display: inline-block;
+    width: 13%;
+    top: 0%;
+    height: 100%;
+    text-align: right;
+}
+
+#pastborder {
+    height: 13px;
+    bottom: 48%;
+    width: 100%;
     /* left: 10%; */
     /* background: hsl(0, 0%, 100%); */
     position: absolute;
     z-index: 10;
-    background-image: linear-gradient(to left,#c4c8cba6 1%, #2f55684f 20%, #ffffff 35%,#ffffff00 200%);
-        box-shadow: -20px 1px 194px 20px rgba(255, 255, 255, 0.52)
+    background-image: linear-gradient(to left, #c4c8cba6 1%, #2f55684f 20%, #ffffff 35%, #ffffff00 200%);
+    box-shadow: -20px 1px 194px 20px rgba(255, 255, 255, 0.52)
 }
 
-.container{
-  padding-top:2.5%;
+.container {
+    padding-top: 2.5%;
 }
 
-.content{
-  display: inline-block;
-  padding-left: 1%;
-  padding-right: 1%;
-  text-align: center;
-}
-#future{
-  display:inline-block;
- 
-  right: 0%;
-  width: 13%;
-  height: 100%;
-  text-align: center;
-
-
-}
-#h1{
-  color:#152f3d;
-}
-#h2{
-  color:#152f3d;  
-  text-shadow: -1px 1px 10px #2f4652b3;
-}
-#h3{
-  color:#152f3d9e;
+.content {
+    display: inline-block;
+    padding-left: 1%;
+    padding-right: 1%;
+    text-align: center;
 }
 
-
-#beijing{
-  text-shadow: -1px 1px 10px #ffffff;
-}
-#dot1world{
-  display:none;
-  border: 7px solid #001f649e;
-  height: 40px;
-  width: 40px;
-  background-color: #fff;
-  border-radius: 50%;
-  left:-40px;
-  border: 1px solid #d5d5d595;
-  top: 80px;
-  position: absolute;
-  display: inline-block;
-  /* align-items: center; */
-  /* text-align: center; */
-  box-shadow: 0px 45px 30px 30px rgba(255, 255, 255, 0.406);  z-index: 100;
-  background: url(../assets/china.png) repeat-x;
-  background-size: auto 100%;
-  -webkit-transform-style: preserve-3d;
-
-  -webkit-animation: move-map 60s infinite linear;
-  -moz-animation: move-map 60s infinite linear;
-  -o-animation: move-map 60s infinite linear;
-  -ms-animation: move-map 60s infinite linear;
-  animation: move-map 60s infinite linear;
+#future {
+    display: inline-block;
+    right: 0%;
+    width: 13%;
+    height: 100%;
+    text-align: center;
 }
 
-#dot2world{
-  border: 7px solid #001f649e;
-  height: 1508px;
-  width: 1508px;
-  background-color: #fff;
-  border-radius: 50%;
-  border: 0px solid #d5d5d5;
-  top: -200px;
-  left: 10%;
-
-  position: absolute;
-  display: inline-block;
-  display:none;
-  /* align-items: center; */
-  /* text-align: center; */
-  box-shadow: inset 0px 1px 200px 0px rgb(255, 255, 255);
-  z-index: 10;
-  background: url(../assets/5.png) repeat-x;
-  background-size: auto 100%;
-  -webkit-transform-style: preserve-3d;
-  -webkit-animation: move-map 10s infinite linear;
-  -moz-animation: move-map 10s infinite linear;
-  -o-animation: move-map 10s infinite linear;
-  -ms-animation: move-map 10s infinite linear;
-  animation: move-map 10s infinite linear;
-  
+#h1 {
+    color: #152f3d;
 }
 
+#h2 {
+    color: #152f3d;
+    text-shadow: -1px 1px 10px #2f4652b3;
+}
 
-#pin1{
-  height: 15px;
+#h3 {
+    color: #152f3d9e;
+}
+
+#beijing {
+    text-shadow: -1px 1px 10px #ffffff;
+}
+
+#dot1world {
+    display: none;
+    border: 7px solid #001f649e;
+    height: 40px;
+    width: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    left: -40px;
+    border: 1px solid #d5d5d595;
+    top: 80px;
+    position: absolute;
+    display: inline-block;
+    /* align-items: center; */
+    /* text-align: center; */
+    box-shadow: 0px 45px 30px 30px rgba(255, 255, 255, 0.406);
+    z-index: 100;
+    background: url(../assets/china.png) repeat-x;
+    background-size: auto 100%;
+    -webkit-transform-style: preserve-3d;
+    -webkit-animation: move-map 60s infinite linear;
+    -moz-animation: move-map 60s infinite linear;
+    -o-animation: move-map 60s infinite linear;
+    -ms-animation: move-map 60s infinite linear;
+    animation: move-map 60s infinite linear;
+}
+
+#dot2world {
+    border: 7px solid #001f649e;
+    height: 1508px;
+    width: 1508px;
+    background-color: #fff;
+    border-radius: 50%;
+    border: 0px solid #d5d5d5;
+    top: -200px;
+    left: 10%;
+    position: absolute;
+    display: inline-block;
+    display: none;
+    /* align-items: center; */
+    /* text-align: center; */
+    box-shadow: inset 0px 1px 200px 0px rgb(255, 255, 255);
+    z-index: 10;
+    background: url(../assets/5.png) repeat-x;
+    background-size: auto 100%;
+    -webkit-transform-style: preserve-3d;
+    -webkit-animation: move-map 10s infinite linear;
+    -moz-animation: move-map 10s infinite linear;
+    -o-animation: move-map 10s infinite linear;
+    -ms-animation: move-map 10s infinite linear;
+    animation: move-map 10s infinite linear;
+}
+
+#pin1 {
+    height: 15px;
     width: 15px;
     background-color: #fff;
     border-radius: 50%;
@@ -292,132 +298,140 @@ h7{
     z-index: 11;
     background: url('../assets/1.png') repeat-x;
     background-size: auto 100%;
-
     -webkit-transform-style: preserve-3d;
-  -webkit-animation: move-map 60s infinite linear;
-  -moz-animation: move-map 60s infinite linear;
-  -o-animation: move-map 60s infinite linear;
-  -ms-animation: move-map 60s infinite linear;
-  animation: move-map 60s infinite linear;
+    -webkit-animation: move-map 60s infinite linear;
+    -moz-animation: move-map 60s infinite linear;
+    -o-animation: move-map 60s infinite linear;
+    -ms-animation: move-map 60s infinite linear;
+    animation: move-map 60s infinite linear;
 }
 
-h5{
-  position: absolute;
-  top:-40px;
-  left:10px;
-  text-shadow: -1px 1px 10px #000000;
-  font-size:25px;
-  color:white;
+h5 {
+    position: absolute;
+    top: -40px;
+    left: 10px;
+    text-shadow: -1px 1px 10px #000000;
+    font-size: 25px;
+    color: white;
 }
+
+
 /*--------------GLOBE----------------*/
 
-
 .ball {
-  display: inline-block;
-  right:0%;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  border-radius: 50%;
-  position: absolute;
-  -webkit-transform-style: preserve-3d;
-  background: url('../assets/5-2.png') repeat-x;
-  background-size: auto 100%;
-  -webkit-animation: move-map 60s infinite linear;
-  -moz-animation: move-map 60s infinite linear;
-  -o-animation: move-map 60s infinite linear;
-  -ms-animation: move-map 60s infinite linear;
-  animation: move-map 60s infinite linear;
+    display: inline-block;
+    right: 0%;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    border-radius: 50%;
+    position: absolute;
+    -webkit-transform-style: preserve-3d;
+    background: url('../assets/5-2.png') repeat-x;
+    background-size: auto 100%;
+    -webkit-animation: move-map 60s infinite linear;
+    -moz-animation: move-map 60s infinite linear;
+    -o-animation: move-map 60s infinite linear;
+    -ms-animation: move-map 60s infinite linear;
+    animation: move-map 60s infinite linear;
 }
 
 .ball:before {
-  content: "";
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  box-shadow: -40px 10px 70px 10px rgba(0, 0, 0, 0.17) inset;
+    content: "";
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    box-shadow: -40px 10px 70px 10px rgba(0, 0, 0, 0.17) inset;
     z-index: 2;
 }
 
 .ball:after {
-  content: "";
-  position: absolute;
-  border-radius: 50%;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  -webkit-filter: blur(0);
-  opacity: 0.3;
-  background: radial-gradient(circle at 50% 80%, #e0ecee00, #dae4e600 10%, #05519400 66%, #06274500 100%);
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    -webkit-filter: blur(0);
+    opacity: 0.3;
+    background: radial-gradient(circle at 50% 80%, #e0ecee00, #dae4e600 10%, #05519400 66%, #06274500 100%);
 }
 
 .ball .shadow {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-transform: rotateX(90deg) translateZ(-150px);
-  -moz-transform: rotateX(90deg) translateZ(-150px);
-  -ms-transform: rotateX(90deg) translateZ(-150px);
-  -o-transform: rotateX(90deg) translateZ(-150px);
-  transform: rotateX(90deg) translateZ(-150px);
-  z-index: -1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-transform: rotateX(90deg) translateZ(-150px);
+    -moz-transform: rotateX(90deg) translateZ(-150px);
+    -ms-transform: rotateX(90deg) translateZ(-150px);
+    -o-transform: rotateX(90deg) translateZ(-150px);
+    transform: rotateX(90deg) translateZ(-150px);
+    z-index: -1;
 }
 
-
 .stage {
-  width: 250px;
-  height: 245px;
-  right:0%;
-  display: inline-block;
-  margin: 20px;
-  -webkit-perspective: 1200px;
-  -moz-perspective: 1200px;
-  -ms-perspective: 1200px;
-  -o-perspective: 1200px;
-  perspective: 1200px;
-  -webkit-perspective-origin: 50% 50%;
-  -moz-perspective-origin: 50% 50%;
-  -ms-perspective-origin: 50% 50%;
-  -o-perspective-origin: 50% 50%;
-  perspective-origin: 50% 50%;
+    width: 250px;
+    height: 245px;
+    right: 0%;
+    display: inline-block;
+    margin: 20px;
+    -webkit-perspective: 1200px;
+    -moz-perspective: 1200px;
+    -ms-perspective: 1200px;
+    -o-perspective: 1200px;
+    perspective: 1200px;
+    -webkit-perspective-origin: 50% 50%;
+    -moz-perspective-origin: 50% 50%;
+    -ms-perspective-origin: 50% 50%;
+    -o-perspective-origin: 50% 50%;
+    perspective-origin: 50% 50%;
 }
 
 @-moz-keyframes move-map {
-  0% {
-    background-position: -849px 0; }
-
-  100% {
-    background-position: 0 0; } }
-
-@-webkit-keyframes move-map {
-  0% {
-    background-position: 0 0; }
-  100% {
-    background-position: -849px 0; }
+    0% {
+        background-position: -849px 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
 }
 
+@-webkit-keyframes move-map {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: -849px 0;
+    }
+}
 
 @-o-keyframes move-map {
-  0% {
-    background-position: -849px 0; }
-
-  100% {
-    background-position: 0 0; } }
+    0% {
+        background-position: -849px 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
 
 @-ms-keyframes move-map {
-  0% {
-    background-position: -849px 0; }
-
-  100% {
-    background-position: 0 0; } }
+    0% {
+        background-position: -849px 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
 
 @keyframes move-map {
-  0% {
-    background-position: -849px 0; }
-
-  100% {
-    background-position: 0 0; } }
+    0% {
+        background-position: -849px 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
