--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,7 +111,7 @@ h5 {
     font-size: 25px;
     color: white;
     margin: 0 auto;
-    text-shadow: -1px 1px 10px #000000;
+    text-shadow: 0px 7px 7px #000000
 }
 
 h6 {
@@ -139,6 +139,13 @@ h7 {
 #h4future {
     color: #152f3d;
     padding-left: 50px;
+}
+
+#descshaddow {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    box-shadow: 0px 1px 13px 5px rgb(35, 50, 57);
 }
 
 .dot {
@@ -265,7 +272,7 @@ h7 {
     background-color: #fff;
     border-radius: 50%;
     left: -40px;
-    border: 1px solid #d5d5d595;
+    border: 1px solid #ffffff2b;
     top: 72px;
     position: absolute;
     display: inline-block;
@@ -392,12 +399,11 @@ h7 {
     position: absolute;
     right: 750px;
     z-index: 100;
-    top: 200px;
+    top: 150px;
 }
 
 .ball {
     display: inline-block;
-    right: 0%;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -406,17 +412,16 @@ h7 {
     -webkit-transform-style: preserve-3d;
     background: url('../assets/5-2.png') repeat-x;
     background-size: auto 100%;
-    -webkit-animation: move-map 60s infinite linear;
-    -moz-animation: move-map 60s infinite linear;
-    -o-animation: move-map 60s infinite linear;
-    -ms-animation: move-map 60s infinite linear;
+    -webkit-animation: move-map 140s infinite linear;
+    -moz-animation: move-map 140s infinite linear;
+    -o-animation: move-map 140s infinite linear;
+    -ms-animation: move-map 140s infinite linear;
     animation: move-map 140s infinite linear;
 }
 
 .ball:before {
     content: "";
     position: relative;
-    top: 0%;
     left: 0%;
     width: 100%;
     height: 100%;
@@ -550,6 +555,33 @@ h7 {
     background-size: auto 100%;
     -webkit-filter: drop-shadow(5px 5px 5px #222);
     filter: drop-shadow(5px 5px 5px #222);
+}
+
+#stream {
+    opacity: 0;
+    background-color: rgba(#333, 0.3);
+    border-radius: 5px;
+    height: 80px;
+    width: 5px;
+    animation: trail 2s linear infinite;
+    position: relative;
+}
+
+@keyframes trail {
+    0% {
+        top: -80px;
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    60% {
+        opacity: 1;
+    }
+    100% {
+        top: 30px;
+        opacity: 0;
+    }
 }
 
 
