--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,14 +128,6 @@ h6 {
     z-index: 200;
 }
 
-h7 {
-    top: 600px;
-    font-size: 40px;
-    position: absolute;
-    text-align: center;
-    background: url(../assets/5.png) repeat-x;
-}
-
 #h4future {
     color: #152f3d;
     padding-left: 50px;
@@ -296,8 +288,8 @@ h7 {
 }
 
 #h2 {
-    color: #152f3d;
-    text-shadow: -1px 1px 10px #2f4652b3;
+    /* color: #152f3d;
+    text-shadow: -1px 1px 10px #2f4652b3;*/
 }
 
 #h3 {
@@ -306,80 +298,6 @@ h7 {
 
 #beijing {
     text-shadow: -1px 1px 10px #ffffff;
-}
-
-#dot1world {
-    display: none;
-    border: 7px solid #001f649e;
-    height: 40px;
-    width: 40px;
-    background-color: #fff;
-    border-radius: 50%;
-    left: -40px;
-    border: 1px solid #ffffff2b;
-    top: 72px;
-    position: absolute;
-    display: inline-block;
-    /* align-items: center; */
-    /* text-align: center; */
-    box-shadow: 0px 40px 40px 30px rgba(0, 0, 0, 0.406);
-    z-index: 100;
-    background: url(../assets/china.png) repeat-x;
-    background-size: auto 100%;
-    -webkit-transform-style: preserve-3d;
-    -webkit-animation: move-map 60s infinite linear;
-    -moz-animation: move-map 60s infinite linear;
-    -o-animation: move-map 60s infinite linear;
-    -ms-animation: move-map 60s infinite linear;
-    animation: move-map 60s infinite linear;
-}
-
-#dot2world {
-    border: 7px solid #001f649e;
-    height: 1508px;
-    width: 1508px;
-    background-color: #fff;
-    border-radius: 50%;
-    border: 0px solid #d5d5d5;
-    top: 200px;
-    left: 10%;
-    position: absolute;
-    display: inline-block;
-    display: none;
-    /* align-items: center; */
-    /* text-align: center; */
-    box-shadow: inset 0px 1px 200px 0px rgb(255, 255, 255);
-    z-index: 10;
-    background: url(../assets/5.png) repeat-x;
-    background-size: auto 100%;
-    -webkit-transform-style: preserve-3d;
-    -webkit-animation: move-map 10s infinite linear;
-    -moz-animation: move-map 10s infinite linear;
-    -o-animation: move-map 10s infinite linear;
-    -ms-animation: move-map 10s infinite linear;
-    animation: move-map 10s infinite linear;
-}
-
-#pin1 {
-    height: 15px;
-    width: 15px;
-    background-color: #fff;
-    border-radius: 50%;
-    position: absolute;
-    display: inline-block;
-    /* padding-left: 1%; */
-    /* align-items: center; */
-    /* text-align: center; */
-    box-shadow: 0px 1px 13px 5px rgb(35, 50, 57);
-    z-index: 11;
-    background: url('../assets/1.png') repeat-x;
-    background-size: auto 100%;
-    -webkit-transform-style: preserve-3d;
-    -webkit-animation: move-map 60s infinite linear;
-    -moz-animation: move-map 60s infinite linear;
-    -o-animation: move-map 60s infinite linear;
-    -ms-animation: move-map 60s infinite linear;
-    animation: move-map 60s infinite linear;
 }
 
 
@@ -391,50 +309,6 @@ h7 {
     top: 200px;
 }
 */
-
-
-/*--------------DASHED LINE----------------*/
-
-#fly {
-    position: absolute;
-    top: 40%;
-    left: 20%;
-    z-index: 201;
-}
-
-.c-dashed-line {
-    width: 80;
-    height: 40;
-}
-
-.c-dashed-line__path {
-    animation: c-dashed-line-path 3s ease-in-out infinite alternate;
-    fill: none;
-    stroke: rgb(255, 255, 255);
-    stroke-dasharray: 940;
-    /* this is the entire length of the line */
-    stroke-dashoffset: 940;
-    /* this is the entire length of the line */
-    stroke-width: 10;
-}
-
-.c-dashed-line__dash {
-    fill: none;
-    stroke: rgb(111, 200, 216);
-    /* this must match the background color */
-    stroke-dasharray: 16 10;
-    /* draws a 10px dash line with a 16px gap between */
-    stroke-width: 12;
-}
-
-@keyframes c-dashed-line-path {
-    from {
-        stroke-dashoffset: 940;
-    }
-    to {
-        stroke-dashoffset: 0;
-    }
-}
 
 
 /*--------------GLOBE----------------*/
@@ -478,15 +352,16 @@ h7 {
     z-index: 2;
 }
 
-.ball.change:after {
+#ballshadow {
     content: "";
     position: absolute;
     border-radius: 50%;
-    width: 100%;
-    height: 100%;
+    width: 260px;
+    height: 250px;
     left: 0px;
     -webkit-filter: blur(0);
     opacity: 0.3;
+    display: none;
     background: radial-gradient(circle at 50% 80%, #b3b3b300, #b3b3b300 10%, #00000073 66%, #000000 100%);
 }
 
@@ -520,6 +395,38 @@ h7 {
     -o-perspective-origin: 50% 50%;
     perspective-origin: 50% 50%;
 }
+
+
+/*--------------FLAG-----------------*/
+
+#dot1world {
+    display: none;
+    border: 7px solid #001f649e;
+    height: 40px;
+    width: 40px;
+    background-color: #fff;
+    border-radius: 50%;
+    left: -40px;
+    border: 1px solid #ffffff2b;
+    top: 72px;
+    position: absolute;
+    display: inline-block;
+    /* align-items: center; */
+    /* text-align: center; */
+    box-shadow: 0px 40px 40px 30px rgba(0, 0, 0, 0.406);
+    z-index: 100;
+    background: url(../assets/china.png) repeat-x;
+    background-size: auto 100%;
+    -webkit-transform-style: preserve-3d;
+    -webkit-animation: move-map 60s infinite linear;
+    -moz-animation: move-map 60s infinite linear;
+    -o-animation: move-map 60s infinite linear;
+    -ms-animation: move-map 60s infinite linear;
+    animation: move-map 60s infinite linear;
+}
+
+
+/*--------------FLAG-ANIMATION----------------*/
 
 @-moz-keyframes move-map {
     0% {
@@ -566,6 +473,45 @@ h7 {
     }
 }
 
+
+/*--------------GLOBE-ANIMATION----------------*/
+
+@-moz-keyframes move-map-globe {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+@-webkit-keyframes move-map-globe {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: calc(100% - 20px) calc(100% - 10px);
+    }
+}
+
+@-o-keyframes move-map-globe {
+    0% {
+        background-position: calc(100% - 20px) calc(100% - 10px);
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
+@-ms-keyframes move-map-globe {
+    0% {
+        background-position: calc(100% - 20px) calc(100% - 10px);
+    }
+    100% {
+        background-position: 0 0;
+    }
+}
+
 @keyframes move-map-globe {
     0% {
         background-position: calc(100% - 20px) calc(100% - 10px);
@@ -575,32 +521,8 @@ h7 {
     }
 }
 
-@keyframes move-map-americawest {
-    0% {
-        background-position: 249px 0;
-    }
-    100% {
-        background-position: -1000px 0;
-    }
-}
 
-@keyframes move-map-america {
-    0% {
-        background-position: 100 0;
-    }
-    100% {
-        background-position: -800px 0;
-    }
-}
-
-@keyframes move-map-europe {
-    0% {
-        background-position: calc(100% - -100px) calc(100% - 10px);
-    }
-    100% {
-        background-position: 800px 0;
-    }
-}
+/*--------------PAPER-PLANE----------------*/
 
 #send {
     width: 300px;
@@ -622,6 +544,9 @@ h7 {
     animation: trail 2s linear infinite;
     position: relative;
 }
+
+
+/*--------------PLANE-ANIMATION----------------*/
 
 @keyframes trail {
     0% {
@@ -650,7 +575,7 @@ h7 {
 }
 
 
-/*--------------BACKGROUND----------------*/
+/*--------------BACKGROUND-ANIMATION----------------*/
 
 @-webkit-keyframes AnimationName {
     0% {
