--- a/styles/styles.css
+++ b/styles/styles.css
@@ -415,7 +415,7 @@ h6 {
     /* text-align: center; */
     box-shadow: 0px 40px 40px 30px rgba(0, 0, 0, 0.406);
     z-index: 100;
-    background: url(../assets/china.png) repeat-x;
+    background-image: url(../assets/china.png) repeat-x;
     background-size: auto 100%;
     -webkit-transform-style: preserve-3d;
     -webkit-animation: move-map 60s infinite linear;
@@ -533,6 +533,8 @@ h6 {
     z-index: 200;
     background-image: url('../assets/send.png');
     background-size: auto 100%;
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+    filter: drop-shadow(5px 5px 5px #222);
 }
 
 #stream {
