--- a/styles/styles.css
+++ b/styles/styles.css
@@ -327,15 +327,15 @@ h6 {
     width: 100%;
     height: 100%;
     margin: 0;
+    left: 0;
+    top: 0;
     border-radius: 0%;
-    position: relative;
+    background-repeat: repeat-x;
+    position: absolute;
     -webkit-transform-style: preserve-3d;
-    background-image: url('../assets/5beijing.png') repeat-x;
+    background-position: calc(100% - 20px) calc(100% - 10px);
     background-size: auto 100%;
     /*
-        background-position:0 0; america
-    background-position: calc(100% - -100px) calc(100% - 10px); eurpe
-
 
         -webkit-animation: move-map 140s infinite linear;
     -moz-animation: move-map 140s infinite linear;
@@ -347,9 +347,20 @@ h6 {
     content: "";
     position: relative;
     left: 0%;
+    top: 0%;
     width: 100%;
     height: 100%;
-    border-radius: 50%;
+    box-shadow: -40px 10px 100px 10px rgba(0, 0, 0, 0.32) inset;
+    z-index: 2;
+}
+
+.ball:after {
+    content: "";
+    position: relative;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
     box-shadow: -40px 10px 100px 10px rgba(0, 0, 0, 0.32) inset;
     z-index: 2;
 }
@@ -384,7 +395,6 @@ h6 {
     width: 1200px;
     height: 700px;
     border-radius: 0%;
-    right: 0%;
     display: inline-block;
     margin: 20px;
     -webkit-perspective: 1200px;
@@ -418,14 +428,15 @@ h6 {
     /* text-align: center; */
     box-shadow: 0px 40px 40px 30px rgba(0, 0, 0, 0.406);
     z-index: 100;
-    background-image: url(../assets/china.png) repeat-x;
-    background-size: auto 100%;
+    background-image: url(../assets/china.png);
+    background-repeat: repeat-x;
+    background-size: auto 130%;
     -webkit-transform-style: preserve-3d;
-    -webkit-animation: move-map 80s infinite linear;
-    -moz-animation: move-map 80s infinite linear;
-    -o-animation: move-map 80s infinite linear;
-    -ms-animation: move-map 80s infinite linear;
-    animation: move-map 80s infinite linear;
+    -webkit-animation: move-map 40s infinite linear;
+    -moz-animation: move-map 40s infinite linear;
+    -o-animation: move-map 40s infinite linear;
+    -ms-animation: move-map 40s infinite linear;
+    animation: move-map 40s infinite linear;
 }
 
 
@@ -433,46 +444,46 @@ h6 {
 
 @-moz-keyframes move-map {
     0% {
-        background-position: 0 0;
+        background-position: -849px -10px;
     }
     100% {
-        background-position: 0 0;
+        background-position: calc(-500%) -10px;
     }
 }
 
 @-webkit-keyframes move-map {
     0% {
-        background-position: 0 0;
+        background-position: -849px -10px;
     }
     100% {
-        background-position: -849px 0;
+        background-position: calc(-500%) -10px;
     }
 }
 
 @-o-keyframes move-map {
     0% {
-        background-position: -849px 0;
+        background-position: -849px -10px;
     }
     100% {
-        background-position: 0 0;
+        background-position: calc(-500%) -10px;
     }
 }
 
 @-ms-keyframes move-map {
     0% {
-        background-position: -849px 0;
+        background-position: -849px -10px;
     }
     100% {
-        background-position: 0 0;
+        background-position: calc(-500%) -10px;
     }
 }
 
 @keyframes move-map {
     0% {
-        background-position: -849px 0;
+        background-position: -849px -10px;
     }
     100% {
-        background-position: 0 0;
+        background-position: calc(-500%) -10px;
     }
 }
 
@@ -481,16 +492,16 @@ h6 {
 
 @-moz-keyframes move-map-globe {
     0% {
-        background-position: 0 0;
+        background-position: calc(100% - 20px) calc(100% - 10px);
     }
     100% {
-        background-position: 0 0;
+        background-position: calc(-500%) calc(100% - 10px);
     }
 }
 
 @-webkit-keyframes move-map-globe {
     0% {
-        background-position: 0 0;
+        background-position: calc(-500%) calc(100% - 10px);
     }
     100% {
         background-position: calc(100% - 20px) calc(100% - 10px);
@@ -502,7 +513,7 @@ h6 {
         background-position: calc(100% - 20px) calc(100% - 10px);
     }
     100% {
-        background-position: 0 0;
+        background-position: calc(-500%) calc(100% - 10px);
     }
 }
 
@@ -511,7 +522,7 @@ h6 {
         background-position: calc(100% - 20px) calc(100% - 10px);
     }
     100% {
-        background-position: 0 0;
+        background-position: calc(-500%) calc(100% - 10px);
     }
 }
 
@@ -520,7 +531,7 @@ h6 {
         background-position: calc(100% - 20px) calc(100% - 10px);
     }
     100% {
-        background-position: 0 0;
+        background-position: -1000px calc(100% - 10px);
     }
 }
 
